Implemented country search functionality and styled page. Added world.js and world.png files

--- a/world.css
+++ b/world.css
@@ -1,1 +1,85 @@
-/* Add your own styles */
+body {
+    margin: 0px;
+    margin-top: 0px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    background-color: #f7fafc;
+
+}
+
+html {
+    height: 100%;
+}
+
+header {
+    background-color: #4a5568;
+    height: 200px;
+    margin: 0px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-flow: row;
+}
+
+#globe {
+    height: 120px;
+    margin: 20px;
+}
+
+header,
+h1 {
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2em;
+}
+
+main {
+    height: 100%;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+content {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+}
+
+#search-bar {
+    display: flex;
+    justify-content: center;
+}
+
+input {
+    width: 400px;
+    height: 30px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 5px 0px;
+    border-radius: 3px;
+    border: none;
+}
+
+#buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 20px;
+}
+
+button {
+    border-radius: 4px;
+    color: white;
+    height: 30px;
+    width: 90px;
+    font-weight: bold;
+
+}
+
+#lookup {
+    background-color: #38b2ac;
+    border: none;
+}
