--- a/world.css
+++ b/world.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     margin-top: 0px;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-flow: column;
@@ -14,8 +14,7 @@ html {
 
 header {
     background-color: #4a5568;
-    height: 200px;
-    margin: 0px;
+    min-height: 200px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -41,6 +40,7 @@ main {
     flex-direction: row;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    flex: 1;
 }
 
 content {
@@ -67,21 +67,27 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 20px;
 }
 
 button {
     border-radius: 4px;
     color: white;
     height: 30px;
-    width: 90px;
+    width: 160px;
     font-weight: bold;
-
+    border: none;
+    margin-top: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 20px;
 }
 
-#lookup {
+#lookup-country {
     background-color: #38b2ac;
-    border: none;
+}
+
+#lookup-cities {
+    background-color: #4299e1;
 }
 
 table {
@@ -111,4 +117,11 @@ tr:nth-child(odd) {
 
 tr:hover {
     background-color: cornflowerblue;
+}
+
+footer {
+    background-color: #4a5568;
+    min-height: 60px;
+    width: 100%;
+    margin-top: 20px;
 }
